--- a/index.html
+++ b/index.html
@@ -42,14 +42,34 @@
             </div>
             <img src="./components/wall.png" alt="wall" class="wall"/>
             <img src="./components/wall-big.png" alt="wall" class="wall-big"/>
-            <!-- end page one -->
-
-            <!-- page two -->
-            <!-- <div class="about">
-                <h1>asd</h1>
-            </div> -->
+            <!-- end page one -->  
         </div>
     </div>
+     <!-- page two -->
+    <div class="about">
+        <div class="content-2">
+            <div class="title-2">
+                <h5>01</h5>
+                <h4>Who We Are</h4>
+            </div>
+            <h1>We Make<br> Designs that<br> Lead and<br> Inpire.</h1>
+            <div class="option">
+                <img src="./components/left-normal.png" alt="Left Normal"/> 
+                <img src="./components/left-normal.png" alt="Right" class="arrow-right"/>
+                <img src="./components/dropdown.png" alt="Dropdown"/>
+            </div>
+            <img src="./components/img.png" alt="image" class="image-2"/>
+            <h3 class="title-h3">A design team building a<br> curated marketplace for UI<br> designers.</h3>
+            <h3 class="sub-h3">4,404 curated design resources to energize<br> your creative workflow. We're a growing family<br> of 334,531 designers and makers from around<br> the world</h3>
+            <button class="contact-us" type="button">Contact Us</button>
+            
+            <div class="bg-number">
+                <img src="./components/number.png" alt="bg-number" id="bg-number" />
+            </div>
+        </div>
+    </div>
+    </div>
+    <!-- end page two -->
 </body>
 </html>
 
